--- a/biologia.css
+++ b/biologia.css
@@ -6,7 +6,7 @@
 
 :root {
     --preto: #000000;
-    --marinho: #493D9E;
+    --marinho: #121e0f;
     --amarelo-claro: #FFF2AF;
     --roxo-claro: #B2A5FF;
     --verde: #99BC85;
