--- a/biologia.css
+++ b/biologia.css
@@ -7,7 +7,7 @@
 :root {
     --preto: #000000;
     --marinho: #121e0f;
-    --amarelo-claro: #FFF2AF;
+    --amarelo-claro: #cbdeba;
     --roxo-claro: #B2A5FF;
     --verde: #99BC85;
     --azul-claro: #E4EFE7;
